src/scss/_story.scss
/* ... */
:root.no-covers .story {
  .story__thumbnail {
    display: none;
    content-visibility: hidden;
  }

  .story__taxonomies {
    margin-bottom: 1.5rem;

    &-space {
      display: none;
    }
  }

  .story__header {
    display: block;

    &:not(._no-thumbnail, ._float-top-left, ._float-top-right) {
      padding-top: calc(var(--page-inset-top, 0px) + var(--layout-spacing-vertical));
    }
  }

  .story__title {
    padding-top: 0;
  }
}

// Catches one case of a lone subscribe button; not all, but one.
body:not(.logged-in) .story__actions :first-child:nth-last-child(3) {
  border-radius: var(--layout-border-radius-small);

  .popup-menu {
    &:last-child {
      --translateX: translateX(0);
      right: 0;
      left: unset;
    }
  }
}
/* ... */

